@@ -1,34 +1,30 @@
-package com.EmazonProject.ms_01_stock.adapters.mapper;
+package com.emazonproject.ms_01_stock.adapters.driving.http.mapper;
 
-import com.EmazonProject.ms_01_stock.adapters.driving.http.dto.response.CategoryResponse;
-import com.EmazonProject.ms_01_stock.dominio.model.Category;
+import com.emazonproject.ms_01_stock.adapters.driving.http.dto.response.CategoryResponse;
+import com.emazonproject.ms_01_stock.dominio.model.Category;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 
 import org.mapstruct.ReportingPolicy;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring",
         unmappedSourcePolicy = ReportingPolicy.IGNORE,
         unmappedTargetPolicy = ReportingPolicy.IGNORE)
 
-public interface iCategoryResponseMapper {
+public interface ICategoryResponseMapper {
     //convertir de category a response
-    @Mapping(target = "idCtg", ignore = true)
-    @Mapping(target = "nameCtg")
-    @Mapping(target = "descriptionCtg")
+
+    @Mapping(source = "id", target = "id")
+    @Mapping(source = "name", target = "name")
+    @Mapping(source = "description", target = "description")
     CategoryResponse toResponse(Category category);
-
-    default List<CategoryResponse> toResponseList(List<Category> categoryList){
-        return categoryList.stream()
-                .map(category -> {
-                    CategoryResponse categoryResponse = new CategoryResponse();
-                    categoryResponse.setNameCtg(category.getNameCtg());
-                    categoryResponse.setDescriptionCtg((category.getDescriptionCtg()));
-                    return categoryResponse;
-
-        }).toList();
+    default List<CategoryResponse> toResponseList(List<Category> categories) {
+        return categories.stream()
+                .map(this::toResponse)
+                .collect(Collectors.toList());
     }
 
 }
